@@ -513,12 +513,6 @@ pthread_mutex_trylock(pthread_mutex_t *mutex)
       return EINVAL;
     }
 
-  if (mutex->mutex == 0 && _pthread_try_enter_critical_section == NULL)
-    {
-      /* TryEnterCriticalSection does not exist in the OS; return ENOSYS. */
-      return ENOSYS;
-    }
-      
   /*
    * We do a quick check to see if we need to do more work
    * to initialise a static mutex. We check 'staticinit'
